suport getLoclae form header, cookie, query or customize. isolate the use of moment and numeral and fix some bugs

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "eslint index.js && nyc ava test/",
     "coverage": "nyc report --reporter=html"
   },
+  "bundledDependencies": [
+    "numeral"
+  ],
   "dependencies": {
     "cookie": "^0.3.1",
     "jed": "^1.1.1",
