--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "think-i18n",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "i18n solution in thinkjs 3.0",
   "main": "index.js",
   "scripts": {
-    "test": "eslint index.js && eslint loader/ && nyc ava test/",
-    "eslint": "eslint index.js loader/",
+    "test": "eslint index.js && eslint src/ && nyc ava test/",
+    "lint": "eslint index.js src/",
+    "lint-fix": "eslint --fix index.js src/",
     "coverage": "nyc ava test/ && nyc report --reporter=html"
   },
   "bundledDependencies": [
@@ -24,6 +25,7 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.16.1",
+    "eslint-config-think": "^1.0.0",
     "coveralls": "~2.11.16",
     "mock-require": "^2.0.1",
     "nyc": "^7.0.0"
