--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "description": "i18n solution in thinkjs 3.0",
   "main": "index.js",
-  "type": "index.d.ts",
+  "types": "index.d.ts",
   "scripts": {
     "test": "eslint index.js && eslint src/ && nyc ava test/",
     "lint": "eslint index.js src/",
